--- a/.github/workflows/pyblack.yml
+++ b/.github/workflows/pyblack.yml
@@ -19,4 +19,4 @@ jobs:
         pip install black
     - name: Analysing the code with black
       run: |
-        python -m black --check --diff .
+        python -m black --verbose .
